Fix chat-input overflow and functionality

--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -1,6 +1,8 @@
 #app-container {
     display: flex;
     flex-direction: row;
+    height: 100%;
+    width: 100%;
 }
 
 #chats-list {
@@ -9,8 +11,8 @@
 }
 
 #chat-container {
-    position: relative;
     width: 100%;
+    height: 100%;
     background-color: var(--chat-bg);
     margin: 0;
     padding: 0;
@@ -52,8 +54,8 @@
     text-align: left;
 }
 
-.chat-input {
-    position: fixed;
+#chat-input {
+    position: sticky;
     bottom: 0;
     padding: 10px 10%;
     width: 100%;
@@ -61,42 +63,42 @@
     background-color: #ffffff;
     border-top: 1px solid var(--line-color);
     box-sizing: border-box;
-}
 
-.chat-input form {
-    box-sizing: border-box;
-    display: flex;
-    width: 100%;
-    gap: 1rem;
-}
+    form {
+        box-sizing: border-box;
+        display: flex;
+        width: 100%;
+        gap: 1rem;
+    }
 
-.chat-input input[type=text] {
-    flex: 1;
-    resize: none;
-    padding: 10px;
-    border: 1px solid var(--line-color);
-    border-radius: 5px;
-    font-size: 1rem;
-    display: inline-block;
-}
+    input[type=text] {
+        flex: 1;
+        resize: none;
+        padding: 10px;
+        border: 1px solid var(--line-color);
+        border-radius: 5px;
+        font-size: 1rem;
+        display: inline-block;
+    }
 
-.chat-input input[type=text]:focus {
-    outline: var(--main-color) 2px solid;
-}
+    input[type=text]:focus {
+        outline: var(--main-color) 2px solid;
+    }
 
-.chat-input button {
-    flex: 0 0 auto;
-    background: var(--main-color);
-    width: 50px;
-    text-align: center;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
-    transition: background-color 0.3s ease;
-}
+    button {
+        flex: 0 0 auto;
+        background: var(--main-color);
+        width: 50px;
+        text-align: center;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        display: inline-block;
+        transition: background-color 0.3s ease;
+    }
 
-.chat-input button:hover {
-    background-color: var(--secondary-color);
+    button:hover {
+        background-color: var(--secondary-color);
+    }
 }
